@@ -237,6 +237,8 @@ INT_PROP_TEST("InsertJeolDetectorDelay", scope->, InsertDetectorDelay)
 INT_PROP_TEST("SelectJeolDetectorDelay", scope->, SelectDetectorDelay)
 BOOL_PROP_TEST("JeolSTEMmagUnitsAreX", scope->, JeolSTEMunitsX)
 BOOL_PROP_TEST("JeolReadStageForWait", scope->, JeolReadStageForWait)
+INT_PROP_TEST("JeolFlashFegTimeout", scope->, JeolFlashFegTimeout)
+INT_PROP_TEST("JeolEmissionTimeout", scope->, JeolEmissionTimeout)
 INT_PROP_TEST("SimulationMode", scope->, SimulationMode)
 BOOL_PROP_TEST("UseInvertedMagRange", scope->, UseInvertedMagRange)
 FLOAT_PROP_TEST("HitachiZMicronsPerGroove", mWinApp->mComplexTasks->, ZMicronsPerDialMark)
