@@ -3631,6 +3631,15 @@
           <TD>Set to 1 to enable use of calls for testing and starting nitrogen refill.</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>JeolFlashFegTimeout</TD>
+          <TD>Timeout in seconds for flashing the FEG; the default is 45.</TD>
+        </TR>
+        <TR VALIGN="top">
+          <TD>JeolEmissionTimeout</TD>
+          <TD>Timeout in seconds for turning the emission back on after flashing the FEG; 
+            the default is 180.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>JeolHasExtraApertures</TD>
           <TD>Set to 1 to use aperture commands that can specify up to 12 kinds of apertures 
             instead of 6.</TD>
